--- a/css/page-styles.css
+++ b/css/page-styles.css
@@ -82,3 +82,24 @@
 .shawn_circle {
     border-radius: 25%;
 }
+
+ .staffButtons {
+  border: 1px black solid;
+      color: black;
+      background: none;
+      transition: 0.3s;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 0.5em;
+    width: 175px;
+    }
+
+.staffButtons:hover {
+      text-decoration: underline;
+      background-color: lightgray;
+    }
+
+    .button-nav {
+      justify-content: center;
+      align-items: center;
+    }
